# ai-prompt-intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml
.cursor/rules/: ai-change-safety.mdc  api-schema-safety.mdc  architecture-boundaries.mdc  observability-requirements.mdc  testing-verification-gate.mdc
.cursor/skills/groq-prompt-contracts/: SKILL.md
.cursor/skills/prompt-workflow-implementation/: SKILL.md
.cursor/skills/release-readiness-check/: SKILL.md
.cursor/skills/vercel-react-best-practices/: SKILL.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  factory.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/application/: service.py
backend/app/domain/: errors.py  models.py
backend/app/infrastructure/: groq_provider.py  logging.py  prompt_guard.py  repository.py
backend/scripts/: init_db.py  run_migration.py
backend/tests/: conftest.py
backend/tests/api/: test_routes.py
backend/tests/unit/: test_groq_provider_prompt_contracts.py  test_prompt_guard.py  test_service.py
docs/: ai-governance.md  api-contract.md  architecture.md  troubleshooting.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  scriptParser.ts  style.css  types.ts
frontend/src/chat/: optionParsing.ts  types.ts  useChatPipeline.ts
frontend/src/components/chat/: AssistantMessage.tsx  (+7 more)
frontend/src/test/: setup.ts
infra/postgres/: init.sql
infra/postgres/migrations/: 001_add_sessions.sql
